public/src/styles.css
/* You can add global styles to this file, and also import other style files */
* {
  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  line-height: 1.5;
}
.container-fluid.bg-1 {
    padding-top: 70px;
}
.name {
    color: #ffffff;
    font-weight: bold;
}
.summary {
    width: 750px;
    margin: auto;
}
h1{
    font-family: 'Montserrat';
    letter-spacing: 6px;
    font-weight: 700;
    text-transform: lowercase;
}
.description {
    font-size: 14pt;
    padding: 10px;
    letter-spacing: 4px;
    color: #ffffff;
}
.aboutme {
    background-color: #555555;
    padding: 10px;
    color: #ffffff;
}
button {
    color: white;
    font-weight: bold;
    text-transform: lowercase;
    letter-spacing: 2px;
    background-color: #555555;
    padding: 7px 15px;
    border: 0px solid white;
}
button:active {
    transform: translateY(2px);
}
.skills {
    background-color: #2a2c2b;
    padding: 10px;
    color: #ffffff;
}
h2, h3, h4{
    font-family: 'Montserrat';
    text-transform: lowercase;
}
h3 {
    font-weight: 700;
    letter-spacing: 2px;
}
h4 {
    font-size: 14px;
}
.italic {
    margin-top: 10px;
    font-style: italic;
}
.bg-1 {
    margin-top: 50px;
    padding-top: 20px;
    background-color: #dc3522; /* orange */
    color: #ffffff;
}
.bg-2 {
    background-color: #374140; /* Dark gray */
    color: #ffffff;
    padding-left: 70px;
    padding-right: 70px;
}
.bg-3 {
    background-color: #ffffff; /* White */
    color: #555555;
    padding-left: 70px;
    padding-right: 70px;
}
.bg-4 {
    background-color: #2a2c2b; /* dark gray */
    color: #ffffff;
    padding-left: 70px;
    padding-right: 70px;
}
.bg-5 {
    background-color: #f0f0f0; /* light gray */
    color: #555555;
    padding-left: 70px;
    padding-right: 70px;
}
.container-fluid {
    padding-top: 15px;
    padding-bottom: 50px;
}
ul {
    margin-top: 10px;
}
.col-sm-4 ul {
    padding-left: 0;
}
.profile {
    border: 7px solid rgba(255, 255, 255, .1);
}

.jerseys {
    margin: 10px auto;
}

.carousel {
    position: relative;
    width: 700px;
    height: 300px;
    margin: 10px auto;
}

.carousel-caption {
    padding-bottom: 5px;
    font-size: 12px;
}

.carousel-indicators {
    bottom: 0px;
}

.carousel-control.left, .carousel-control.right {
    background-image: none !important;
}

.carousel-gradient {
  background: rgba(255, 255, 255, 0) linear-gradient(to bottom, rgba(30, 30, 30, 0) 75%, rgba(30, 30, 30, .8) 100%) repeat scroll 0 0;
  position: relative;
  margin-top: -300px;
  height: 300px;
}

.fa-chevron-left {
    margin-top: 130px !important;
    margin-left: -50px !important;
}

.fa-chevron-right {
    margin-top: 130px !important;
    margin-right: -50px !important;
}

.active {
    background-color: #dc3522;
}

nav.navbar {
    padding-top: 5px;
    padding-bottom: 5px;
    border: 0;
    border-radius: 0;
    margin-bottom: 0;
    background-color: #2a2c2b;
    min-height: 80px;

    -webkit-transition: padding 0.6s ease-in-out;
    transition: padding 0.6s ease-in-out;
}

nav.shrink {
    min-height: 50px;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
}

nav.shrink a {
    padding-top: 15px !important;
    padding-bottom: 15px !important;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
}

nav.shrink li a {
    padding-top: 15px !important;
    padding-bottom: 15px !important;
    font-size: 14px !important;
    -webkit-transition: all 0.6s ease;
    transition: all 0.6s ease;
}

nav.shrink a.navbar-brand {
    font-size: 18px;
    text-transform: lowercase;
}

.navbar-nav li a:hover {
    color: #dc3522 !important;
}
.navbar-nav li a {
    color: #ffffff !important;
    font-size: 15px !important;
    padding-top: 24px;
    transition: all 0.6s;
    text-transform: lowercase;
}
.navbar-brand {
    padding: 24px 15px;
    font-size: 22px;
    text-transform: lowercase;
    font-weight: bold;
    color: #dc3522 !important;
    transition: all 0.6s;
    letter-spacing: 4px;
}

.container-fluid span { 
  margin-top: -50px;        /* Size of fixed header */
  padding-bottom: 50px; 
  display: block; 
  visibility: hidden;
}

.row {
    display: inline;
}
.column {
    display: block;
}

/* overlay */
.container1 {
  display: inline-block;
  position: relative;
  width: 114px;
  margin: 5px;
}

.image1 {
  display: block;
  width: 114px;
  height: auto;
}

.overlay1 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: black;
  border-radius: 50%;
}

.container1:hover .overlay1 {
  opacity: .7;
}

.text1 {
  color: white;
  font-size: 15px;
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 1;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

h3 {
    margin-top: 0px !important;
}

 /* Style all font awesome icons */
.fa {
    font-size: 30px;
    padding: 10px;
    margin: 10px 7px 7px;
    width: 50px;
    height: 50px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
}
/* Add a hover effect if you want */
.fa:hover {
    opacity: 0.7;
}
/* Set a specific color for each brand */

/* Facebook */
.fa-linkedin {
  background: #007bb5;
  color: white;
}
/* Twitter */
.fa-github {
    background: white;
    color: #333;
} 
.fa-envelope-o {
    background: #dd4b39;
    color: white;
} 

